--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
   <div class='sections_prose'>
     <section id='cover' class='cover active'>
       <h1>Guest Oakland</h1>
-      <small class='scroll quiet'>Scroll &#x25BE;</small>
+      <h2>An app about gentrification in Oakland’s west side</h2>
+      <img src="images/mouse_grey.png">
+      <h3>scroll</h3>
     </section>
     <section id='baker'>
       <h3>221b Baker St.</h3>
