--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body class="section-0">
 
   <!-- Splash page -->
-<!--   <div id="pan">
+  <div id="pan">
   <div id="splash" class="fullscreen background">
     <div class="content-a">
       <div class="content-b">
@@ -33,7 +33,7 @@
      </div>
   </div>
 </div>
-</div> -->
+</div>
 
 
 
