--- a/index.html
+++ b/index.html
@@ -50,33 +50,39 @@
       <h3>scroll</h3>
     </section>
     <section id='bart'>
-      <img src="images/bart.png" class="feature-img">
       <h3>West Oakland Bart Station</h3>
+      <img src="images/bart.png" class="feature-img">
       <p>Turf dancing is a form of American street dance that is said to have originated in Oakland, California. According to locals, credit for the term goes to dancer Jeriel Bey, who created it as an acronym for Taking Up Room on the Floor. Prior names for the dance form, like "having fun with it" or "hitting it" didn't seem as marketable. Dance elements include popping, locking, and miming. Others say that the term turf dancing branced from breakdancing as a way to represent where dancers were from (the same as 'blocks' or 'sets') through dance. If you ride through the West Oakland BART station, you just might encounter a Turf dancer, making the most of the crowded train as a moving stage. </p>
       <iframe width="560" height="315" src="https://www.youtube.com/embed/dQOKKwVzbtA" frameborder="0" allowfullscreen></iframe>
     </section>
     <section id='hotel'>
       <h3>Hotel California</h3>
+      <img src="images/hotel.png" class="feature-img">
       <p>Built in the 1920s, the California Hotel was once a place that welcomed African American artists and musicians when they were discriminated against elsewhere. Then, somewhere around the 1970s--you know what was going on around that time--the neighborhood started to deteriorate. The hotel ran into financial trouble and eventually closed. Fast forward to 2011: the East Bay Asian Local Development Corporation and other supporters pulled together funds for a major renovation. Now, the California Hotel provides 137 units of low-income housing and even has a rooftop garden. </p>
     </section>
     <section id='station'>
       <h3>16th Street Station</h3>
+      <img src="images/station.png" class="feature-img">
       <p>Built in 1912 and no longer in active use, the 16th Street station was once part of Southern Pacific, among the leading employers in Oakland. In its heyday, the station was arguably the largest transportation hub in Oakland and housed the West Coast branch of the very first African American Labor Union in America. It was the last stop for many African Americans leaving the South, making this station known for the second great migration. The station, like many others, went out of business with the transition to private transportation. It is now owned by an affordable housing non-profit with ambitious plans for restoration, and occasionally used for events like haunted houses and film shoots.</p>
     </section>
     <section id='crane'>
       <h3>The Port</h3>
+       <img src="images/cranes.png" class="feature-img">
       <p>The Port of Oakalnd spans 20 miles of waterfront, from the Bay Bridge through Oakland International Airport. Global trade through the port is valued at $40 billion a year. The port supports about 73,000 jobs in the San Francisco Bay Area.</p>
     </section>
     <section id='defermery'>
       <h3>Defermery Park</h3>
+      <img src="images/defermery.png" class="feature-img">
       <p>The park was named after James de Fremery, who was the founder of the Savings Union Bank of San Francisco (which became Wells Fargo). De Fremery Park was where the Black Panther Party housed their social services administration and political activity. Located in a landmark Victorian house, de Fremery is a hub for youth and adults in West Oakland. In addition to being used for the site of rallies, fundraisers, and even physical training, the park is a distribution point for free groceries and a testing site for sickle-cell anemia.</p>
     </section>
     <section id='mural'>
       <h3>The Mural</h3>
+      <img src="images/mural.png" class="feature-img">
       <p>U.S. Olympic sprinters Tommie Smith and John Carlos, gold and bronze medalists in the 200 meter, stood at the medal podium during the 1968 Summer Games in Mexico City, bowed their heads and held a black-gloved hand raised as the American National Anthem played during the victory ceremony. This was a mural commemorating this historic Olympic event, with images of the athletes and the phrase, "It only takes a pair of gloves." Unfortunately, if you happen to pass by, you will notice the building and mural have been bulldozed, as part of West Oakland redevelopment plans.</p>
     </section>
     <section id='mcclymonds'>
       <h3>McClymonds High School</h3>
+      <img src="images/hs.png" class="feature-img">
       <p>McClymonds High School, opened in 1915, is the third oldest school in Oakland and currently the only high school in West Oakland operating under the rules and regulations of the Oakland Unified School District. After an experiment with a Small Schools model, in 2010, McClymonds reconstituted as a comprehensive high school once again, with mostly new staff and teachers. The school has been known for its athletic programs. A few famous alumni from McClymonds are Ron Dellums, MC Hammer, and Bill Russell. </p>
     </section>
 </article>
