--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <section id='hotel'>
       <h3>Hotel California</h3>
       <img src="images/hotel.png" class="feature-img">
-      <p>Built in the 1920s, the California Hotel was once a place that welcomed African American artists and musicians when they were discriminated against elsewhere. Then, somewhere around the 1970s--you know what was going on around that time--the neighborhood started to deteriorate. The hotel ran into financial trouble and eventually closed. Fast forward to 2011: the East Bay Asian Local Development Corporation and other supporters pulled together funds for a major renovation. Now, the California Hotel provides 137 units of low-income housing and even has a rooftop garden. </p>
+      <p>Built in the 1920s, the California Hotel was once a place that welcomed African American artists and musicians when they were discriminated against elsewhere. Then, somewhere around the 1970s--you know what was going on around that time--the neighborhood started to deteriorate. The hotel ran into financial trouble and eventually closed. Fast forward to 2011: the East Bay Asian Local Development Corporation and other supporters pulled together funds for a major renovation. Now, the California Hotel provides 137 units of low-income housing and even has a rooftop garden.  </p>
     </section>
     <section id='station'>
       <h3>16th Street Station</h3>
@@ -73,17 +73,17 @@
     <section id='defermery'>
       <h3>Defermery Park</h3>
       <img src="images/defermery.png" class="feature-img">
-      <p>The park was named after James de Fremery, who was the founder of the Savings Union Bank of San Francisco (which became Wells Fargo). De Fremery Park was where the Black Panther Party housed their social services administration and political activity. Located in a landmark Victorian house, de Fremery is a hub for youth and adults in West Oakland. In addition to being used for the site of rallies, fundraisers, and even physical training, the park is a distribution point for free groceries and a testing site for sickle-cell anemia.</p>
+      <p>De Fremery Park is named after James de Fremery, who was the founder of the Savings Union Bank of San Francisco (the institution that became Wells Fargo). De Fremery was where the Black Panther Party housed key social services and political activities, and the park was a distribution site for free food and sickle-cell anema testing. With its landmark Victorian house, de Fremery is now a gathering place for  West Oakland residents and families, who get together there for community events and rallies, exercise, fundraisers, classes, and celebrations. </p>
     </section>
     <section id='mural'>
       <h3>The Mural</h3>
       <img src="images/mural.png" class="feature-img">
-      <p>U.S. Olympic sprinters Tommie Smith and John Carlos, gold and bronze medalists in the 200 meter, stood at the medal podium during the 1968 Summer Games in Mexico City, bowed their heads and held a black-gloved hand raised as the American National Anthem played during the victory ceremony. This was a mural commemorating this historic Olympic event, with images of the athletes and the phrase, "It only takes a pair of gloves." Unfortunately, if you happen to pass by, you will notice the building and mural have been bulldozed, as part of West Oakland redevelopment plans.</p>
+      <p>U.S. Olympic sprinters Tommie Smith and John Carlos, gold and bronze medalists in the 200 meter, stood at the medal podium during the 1968 Summer Games in Mexico City, bowed their heads and held a black-gloved hand raised as the American National Anthem played during the victory ceremony. This was a mural commemorating this historic Olympic event, with images of the athletes and the phrase, "It only takes a pair of gloves." If you happen to pass by, you will notice the building and mural have been bulldozed, as part of West Oakland redevelopment plans.</p>
     </section>
     <section id='mcclymonds'>
       <h3>McClymonds High School</h3>
       <img src="images/hs.png" class="feature-img">
-      <p>McClymonds High School, opened in 1915, is the third oldest school in Oakland and currently the only high school in West Oakland operating under the rules and regulations of the Oakland Unified School District. After an experiment with a Small Schools model, in 2010, McClymonds reconstituted as a comprehensive high school once again, with mostly new staff and teachers. The school has been known for its athletic programs. A few famous alumni from McClymonds are Ron Dellums, MC Hammer, and Bill Russell. </p>
+      <p>McClymonds High School, opened in 1915, is the third oldest school in Oakland and currently the only high school in West Oakland operating under the rules and regulations of the Oakland Unified School District. After an experiment with a Small Schools model, in 2010, McClymonds reconstituted as a comprehensive high school once again, with mostly new staff and teachers. The school has been known for its athletic programs. A few famous alumni from McClymonds are Ron Dellums, MC Hammer, and Bill Russell.</p>
     </section>
 </article>
 
