--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
       <h3>Defermery Park</h3>
       <img src="images/defermery.png" class="feature-img">
       <p>De Fremery Park is named after James de Fremery, who was the founder of the Savings Union Bank of San Francisco (the institution that became Wells Fargo). De Fremery was where the Black Panther Party housed key social services and political activities, and the park was a distribution site for free food and sickle-cell anema testing. With its landmark Victorian house, de Fremery is now a gathering place for  West Oakland residents and families, who get together there for community events and rallies, exercise, fundraisers, classes, and celebrations. </p>
+       <audio id="audio-player" src="media/ErikaHuggins.mp3" type="audio/mp3" controls="controls"></audio>
     </section>
     <section id='mural'>
       <h3>The Mural</h3>
@@ -84,6 +85,7 @@
       <h3>McClymonds High School</h3>
       <img src="images/hs.png" class="feature-img">
       <p>McClymonds High School, opened in 1915, is the third oldest school in Oakland and currently the only high school in West Oakland operating under the rules and regulations of the Oakland Unified School District. After an experiment with a Small Schools model, in 2010, McClymonds reconstituted as a comprehensive high school once again, with mostly new staff and teachers. The school has been known for its athletic programs. A few famous alumni from McClymonds are Ron Dellums, MC Hammer, and Bill Russell.</p>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/o8IhAqxvgoQ" frameborder="0" allowfullscreen></iframe>
     </section>
 </article>
 
