--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
       <p>The Port of Oakalnd spans 20 miles of waterfront, from the Bay Bridge through Oakland International Airport. Global trade through the port is valued at $40 billion a year. The port supports about 73,000 jobs in the San Francisco Bay Area.</p>
     </section>
     <section id='defermery'>
-      <h3>Defermery Park</h3>
+      <h3>DeFremery Park</h3>
       <img src="images/defermery.png" class="feature-img">
-      <p>De Fremery Park is named after James de Fremery, who was the founder of the Savings Union Bank of San Francisco (the institution that became Wells Fargo). De Fremery was where the Black Panther Party housed key social services and political activities, and the park was a distribution site for free food and sickle-cell anema testing. With its landmark Victorian house, de Fremery is now a gathering place for  West Oakland residents and families, who get together there for community events and rallies, exercise, fundraisers, classes, and celebrations. </p>
+      <p>DeFremery Park is named after James DeFremery, who was the founder of the Savings Union Bank of San Francisco (the institution that became Wells Fargo). DeFremery was where the Black Panther Party housed key social services and political activities, and the park was a distribution site for free food and sickle-cell anema testing. With its landmark Victorian house, de Fremery is now a gathering place for  West Oakland residents and families, who get together there for community events and rallies, exercise, fundraisers, classes, and celebrations. </p>
        <audio id="audio-player" src="media/ErikaHuggins.mp3" type="audio/mp3" controls="controls"></audio>
     </section>
     <section id='mural'>
