--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       <h3>Defermery Park</h3>
       <img src="images/defermery.png" class="feature-img">
       <p>De Fremery Park is named after James de Fremery, who was the founder of the Savings Union Bank of San Francisco (the institution that became Wells Fargo). De Fremery was where the Black Panther Party housed key social services and political activities, and the park was a distribution site for free food and sickle-cell anema testing. With its landmark Victorian house, de Fremery is now a gathering place for  West Oakland residents and families, who get together there for community events and rallies, exercise, fundraisers, classes, and celebrations. </p>
-       <audio id="audio-player" src="media/ErikaHuggins.mp3" type="audio/mp3" controls="controls"></audio>
+       <audio id="audio-player" src="media/ErikaHuggins_Defremery_Park.mp3" type="audio/mp3" controls="controls"></audio>
     </section>
     <section id='mural'>
       <h3>The Mural</h3>
