changed some team info

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
             <p>Joi Smith</p>
           </div>
         </div>
-          <h4>The Staff</h4>
+        <h4>The Staff</h4>
         <div class="row">
           <div class=" medium-4 columns">
             <img class="round" src="images/team/asha.jpg">
@@ -202,10 +202,18 @@
             <p>Teresa Chin<br/><small>Producer and Designer</small></p>
           </div>
         </div>
-                <div class="row">
-          <div class=" medium-12 columns text-center">
+        <div class="row">
+          <div class=" medium-4 columns text-center">
+            <img class="round" src="images/team/lissa.jpg">
+            <p>Lissa Soep<br/><small>Senior Editor</small></p>
+          </div>
+          <div class=" medium-4 columns text-center">
             <img class="round" src="images/team/cliff.jpg">
             <p>Clifford Lee<br/><small>Scholar-in-Residence</small></p>
+          </div>
+          <div class=" medium-4 columns text-center">
+            <img class="round" src="images/team/ike.jpg">
+            <p>Ike Sriskandarajah<br/><small>Science Producer</small></p>
           </div>
         </div>
       </section>
@@ -216,9 +224,9 @@
       <p class="hidden">Add Your Story!</p>
     </div>
 
-    <div id="myModal" class="reveal-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
-        <iframe src="https://docs.google.com/forms/d/1u37pdHOJY3LS0yegq1LKjLw9_ktsDTE80ReeIi2VWGo/viewform?embedded=true" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
-        <a class="close-reveal-modal" aria-label="Close">&#215;</a>
+    <div id="myModal" class="reveal-modal text-center" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
+      <iframe src="https://docs.google.com/forms/d/1u37pdHOJY3LS0yegq1LKjLw9_ktsDTE80ReeIi2VWGo/viewform?embedded=true" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+      <a class="close-reveal-modal" aria-label="Close">&#215;</a>
     </div>
 
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
