--- a/index.html
+++ b/index.html
@@ -1,22 +1,40 @@
-<!doctype html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML+RDFa 1.0//EN" "http://www.w3.org/MarkUp/DTD/xhtml-rdfa-1.dtd">
 <html class="no-js" lang="en">
 <head>
-  <meta charset="utf-8" />
-<!--[if lt IE 9]>
-<script src="https://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-<![endif]-->
-<meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no' />
-<title>West Side Stories</title>
-<link href='http://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
-<link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
-<link rel="stylesheet" href="css/foundation-icons.css">
-<link rel="stylesheet" type="text/css" href="bower_components/foundation/css/foundation.css">
-<link rel="stylesheet" type="text/css" href="bower_components/mapbox.js/mapbox.css">
-<link rel="stylesheet" href="css/app.css" />
 
-<script src="bower_components/underscore/underscore.js"></script>
-<script src="bower_components/mapbox.js/mapbox.js"></script>
-<script src="bower_components/modernizr/modernizr.js"></script>
+  <meta charset="utf-8" />
+  <!--[if lt IE 9]>
+  <script src="https://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+  <![endif]-->
+  <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no' />
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <meta name="description" content="We tend to talk about gentrification as one story: newcomers displace long-time residents, erasing history and disrupting culture in the process. But living through dramatic neighborhood change always brings up many stories. Those stories--from West Oakland's people and places--are what this interactive is all about.">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+
+  <!--facebook-->
+  <meta property="og:title" content="West Side Stories: Gentrification in West Oakland">
+  <meta property="og:url" content="http://youthradio.github.io/">
+  <meta property="og:site_name" content="West Side Stories">
+  <meta property="og:description" content="We tend to talk about gentrification as one story: newcomers displace long-time residents, erasing history and disrupting culture in the process. But living through dramatic neighborhood change always brings up many stories. Those stories--from West Oakland's people and places--are what this interactive is all about.">
+  <meta property="og:image" content="images/facebook_shot.png">
+  <meta property="og:type" content="Interactive News">
+
+  <!-- stylesheets -->
+  <link rel="icon" href="images/about.png" type="image/x-icon">
+  <link rel="shortcut icon" href="images/about.png" type="image/x-icon">
+  <link rel="apple-touch-icon" href="images/about.png">
+<link rel="apple-touch-icon-precomposed" href="images/about.png">
+  <title>West Side Stories</title>
+  <link href='http://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="css/foundation-icons.css">
+  <link rel="stylesheet" type="text/css" href="bower_components/foundation/css/foundation.css">
+  <link rel="stylesheet" type="text/css" href="bower_components/mapbox.js/mapbox.css">
+  <link rel="stylesheet" href="css/app.css" />
+  <!-- js -->
+  <script src="bower_components/underscore/underscore.js"></script>
+  <script src="bower_components/mapbox.js/mapbox.js"></script>
+  <script src="bower_components/modernizr/modernizr.js"></script>
 </head>
 <body class="section-0">
 
