--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <meta property="og:site_name" content="West Side Stories">
   <meta property="og:description" content="We tend to talk about gentrification as one story: newcomers displace long-time residents, erasing history and disrupting culture in the process. But living through dramatic neighborhood change always brings up many stories. Those stories--from West Oakland's people and places--are what this interactive is all about.">
   <meta property="og:image" content="images/facebook_shot.png">
-  <meta property="og:type" content="Interactive News">
+  <meta property="og:type" content="website">
 
   <!-- stylesheets -->
   <link rel="icon" href="images/about.png" type="image/x-icon">
