--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no' />
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="description" content="We tend to talk about gentrification as one story: newcomers displace long-time residents, erasing history and disrupting culture in the process. But living through dramatic neighborhood change always brings up many stories. Those stories--from West Oakland's people and places--are what this interactive is all about.">
-    <meta name="apple-mobile-web-app-capable" content="yes">
     <!--facebook-->
     <meta property="og:title" content="West Side Stories: Gentrification in West Oakland">
     <meta property="og:url" content="http://youthradio.github.io/">
@@ -169,7 +168,7 @@
             <section id='about'>
               <h3>The Team</h3>
               <img src="images/about.png" class="feature-img">
-              <p>West Side Stories is a project of Youth Radio Interactive, a production company in downtown Oakland where young people collaborate with professional developers to create dynamic stories like this one.</p>
+              <p>West Side Stories is a project of <a href="https://youthradio.org/yri/">Youth Radio <em>Interactive</em></a>, a production company in downtown Oakland where young people collaborate with professional developers to create dynamic stories like this one.</p>
               <h4>The Youth Team</h4>
               <div class="row">
                 <div class=" medium-4 columns">
@@ -231,7 +230,7 @@
               </div>
               <div class="row">
                 <div class=" small-12 columns text-center">
-                  <p><small>This interactive was inpsired by <em>Young Hahn's</em><a href="http://alistapart.com/article/hack-your-maps"> Shelock Holmes map.</a><small><p>
+                  <p><small>This interactive was adapted from <em>Young Hahn's</em><a href="http://alistapart.com/article/hack-your-maps"> Shelock Holmes map.</a><small><p>
                 </div>
               </div>
             </section>
