--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <section id='bart'>
               <h3>West Oakland Bart Station</h3>
               <img src="images/bart.png" class="feature-img">
-              <p>Turf dancing is a form of American street dance that is said to have originated in Oakland, California. According to locals, credit for the term goes to dancer Jeriel Bey, who created it as an acronym for Taking Up Room on the Floor. Prior names for the dance form, like "having fun with it" or "hitting it" didn't seem as marketable. Dance elements include popping, locking, and miming. Others say that the term turf dancing branced from breakdancing as a way to represent where dancers were from (the same as 'blocks' or 'sets') through dance. If you ride through the West Oakland BART station, you just might encounter a Turf dancer, making the most of the crowded train as a moving stage. </p>
+              <p>Turf dancing is a form of American street dance that is said to have originated in Oakland, California. According to locals, credit for the term goes to dancer Jeriel Bey, who created it as an acronym for Taking Up Room on the Floor. Prior names for the dance form, like "having fun with it" or "hitting it" didn't seem as marketable. Dance elements include popping, locking, and miming. If you ride through the West Oakland BART station, you just might encounter a Turf dancer, making the most of the crowded train as a moving stage. </p>
               <p><small><a target="_blank" href="http://www.eastbayexpress.com/oakland/oaklands-booming-street-ballet/Content?oid=3847454">Source</a></small></p>
               <div class="videoWrapper">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/dQOKKwVzbtA" frameborder="0" allowfullscreen></iframe>
