disable modal on mobile

--- a/index.html
+++ b/index.html
@@ -237,9 +237,15 @@
           </article>
 
           <!-- Modal trigger -->
-          <div id="modal-trigger" class="text-center">
+          <div id="modal-trigger" class="text-center hide-for-touch">
             <a href="#" data-reveal-id="myModal"><i id="plus" class="fi-plus large"></i></a>
             <p class="hidden">Add Your Story!</p>
+          </div>
+
+          <!-- Modal trigger mobile -->
+          <div id="modal-trigger-touch" class="text-center show-for-touch">
+            <a href="https://docs.google.com/a/youthradio.org/forms/d/1u37pdHOJY3LS0yegq1LKjLw9_ktsDTE80ReeIi2VWGo/viewform"><i id="plus-touch" class="fi-plus large"></i></a>
+            <p class="hidden touch">Add Your Story!</p>
           </div>
 
           <!-- Modal -->
