--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             <section id='defermery'>
               <h3>DeFremery Park</h3>
               <img src="images/defermery.png" class="feature-img">
-              <p>DeFremery Park is named after James DeFremery, who was the founder of the Savings Union Bank of San Francisco (the institution that became Wells Fargo). DeFremery was where the Black Panther Party housed key social services and political activities, and the park was a distribution site for free food and sickle-cell anema testing. With its landmark Victorian house, DeFremery is now a gathering place for  West Oakland residents and families, who get together there for community events and rallies, exercise, fundraisers, classes, and celebrations. </p>
+              <p>DeFremery Park is named after James DeFremery, who was the founder of the Savings Union Bank of San Francisco (the institution that became Wells Fargo). DeFremery was where the Black Panther Party housed key social services and political activities, and the park was a distribution site for free food and sickle-cell anemia testing. With its landmark Victorian house, DeFremery is now a gathering place for  West Oakland residents and families, who get together there for community events and rallies, exercise, fundraisers, classes, and celebrations. </p>
               <p><small><a target="_blank" href="https://localwiki.org/oakland/de_Fremery_Park">Source</a></small></p>
               <hr>
               <p>Ericka Huggins is a professor of sociology and women's studies, and the former director of the Black Panther Party's Oakland Community School. She joined the BPP as a teenager in 1967.</p>
