--- a/index.html
+++ b/index.html
@@ -137,10 +137,7 @@
             <section id='malik'>
                 <h3>Malik</h3><img class="feature-img" src="images/malik.png">
 
-                <p>22-year old Malik Byers grew up in West Oakland, but his
-                family had to move away. He reflects on how his old
-                neighborhood has changed in his absence.</p><audio controls=
-                "controls" id="audio-player" src="media/malik.mp3"></audio>
+                <p>22-year old Malik Byers grew up in West Oakland. He reflects on how his old neighborhood has changed over the years.</p><audio controls="controls" id="audio-player" src="media/malik.mp3"></audio>
             </section>
 
             <section id='station'>
