--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
 
         <!-- Modal trigger -->
         <div class="text-center hide-for-touch" id="modal-trigger">
-            <a class="fi-plus large" data-reveal-id="myModal" href="#" style=
+            <a class="fi-plus large" id="plus" data-reveal-id="myModal" href="#" style=
             "font-style: italic"></a>
 
             <p class="hidden">Add Your Story!</p>
@@ -441,7 +441,7 @@
 
         <!-- Modal trigger mobile -->
         <div class="text-center show-for-touch" id="modal-trigger-touch">
-            <a class="fi-plus large" href=
+            <a id="plus-touch" class="fi-plus large" href=
             "https://docs.google.com/a/youthradio.org/forms/d/1u37pdHOJY3LS0yegq1LKjLw9_ktsDTE80ReeIi2VWGo/viewform"
             style="font-style: italic"></a>
 
