--- a/index.html
+++ b/index.html
@@ -144,18 +144,7 @@
                 <h3>16th Street Station</h3><img class="feature-img" src=
                 "images/station.png">
 
-                <p>Built in 1912 and no longer in active use, the 16th Street
-                station was once part of Southern Pacific, among the leading
-                employers in Oakland. In its heyday, the station was arguably
-                the largest transportation hub in Oakland and housed the West
-                Coast branch of the very first African American Labor Union in
-                America. It was the last stop for many African Americans
-                leaving the South, making this station known for the second
-                great migration. The station, like many others, went out of
-                business with the transition to private transportation. It is
-                now owned by an affordable housing non-profit with ambitious
-                plans for restoration, and occasionally used for events like
-                haunted houses and film shoots.</p>
+                <p>Built in 1912 and no longer in active use, the 16th Street station was once among the largest transportation centers in Oakland. It housed the West Coast branch of the very first African American Labor Union in America and was the last stop for many African Americans leaving the South. The station is now owned by an affordable housing non-profit with ambitious plans for restoration. In the meantime, it’s occasionally used for events like haunted houses and film shoots.</p>
 
                 <p><small><a href="http://www.16thstreetstation.com" target=
                 "_blank">Source</a></small></p>
@@ -234,7 +223,7 @@
                 src="media/buyer1.mp3"></audio>
                 <hr>
 
-                <p>A couple from San Francisco attends a West Oakland open
+                <p>A couple from San Francisco attend a West Oakland open
                 house, looking for a neighborhood with a little more
                 "flavor."</p><audio controls="controls" id="audio-player" src=
                 "media/buyer2.mp3"></audio>
@@ -246,7 +235,7 @@
                 "media/buyer3.mp3"></audio>
                 <hr>
 
-                <p>A couple that wants to stay in the East Bay checks out an
+                <p>A couple that want to stay in the East Bay checks out an
                 open house in West Oakland for an affordable place to raise
                 their future family.</p><audio controls="controls" id=
                 "audio-player" src="media/buyer4.mp3"></audio>
@@ -276,10 +265,7 @@
                 <h3>McClymonds High School</h3><img class="feature-img" src=
                 "images/hs.png">
 
-                <p>McClymonds High School, opened in 1915, is the third oldest
-                school in Oakland and currently the only high school in West
-                Oakland operating under the rules and regulations of the
-                Oakland Unified School District. After an experiment with a
+                <p>Opened in 1915, McClymonds is one of the oldest schools in Oakland and the only one in West Oakland that’s operated by the city’s school district. After an experiment with a
                 Small Schools model, in 2010, McClymonds reconstituted as a
                 comprehensive high school once again, with mostly new staff and
                 teachers. The school has been known for its athletic programs.
@@ -421,7 +407,7 @@
 
                 <div class="row">
                     <div class=" small-12 columns text-center">
-                        <p><small>This interactive was adapted from <em>Young
+                        <p><small>This interactive was inspired by and adapted from <em>Young
                         Hahn's</em><a href=
                         "http://alistapart.com/article/hack-your-maps"> Shelock
                         Holmes map.</a></small></p>
